# hyperliquid_rust_bot

./: .env.test  .gitignore  Cargo.toml  LICENSE  README.md  agent.md  ci.sh  config.toml  gen_strats.sh  run.sh  rust-toolchain.toml
equity/: curve.csv
src/: assets.rs  backtest.rs  bot.rs  consts.rs  executor.rs  helper.rs  lib.rs  margin.rs  market.rs  market2.rs  metrics.rs  signal.rs  strategy.rs  stream.rs  trade_setup.rs  wallet.rs
src/backend/: app_state.rs  auth.rs  bot_manager.rs  crypto.rs  db.rs  mod.rs  routes.rs  scripting.rs
src/backtest/: backtester.rs  candle_store.rs  downsample.rs  fetcher.rs  mod.rs  types.rs
src/broadcast/: broadcaster.rs  candle_cache.rs  mod.rs  user_event_relay.rs
src/exec/: executor.rs  helpers.rs  mod.rs  types.rs
src/frontend/: backtest_structs.rs  mod.rs  ws_structs.rs
src/frontend/interface/: index.html  package-lock.json  package.json
src/frontend/interface/src/: App.tsx  index.css  main.tsx  types.ts
src/signal/: engine.rs  helpers.rs  mod.rs  signal.rs  types.rs
src/strats/: elder_triple_screen.rs  mod.rs  rsi_chop_swing.rs  rsi_ema_scalp.rs  sma_rsi_scalp_test.rs  srsi_adx_scalp.rs
web_ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web_ui/src/: App.tsx  consts.ts  index.css  kwant-theme.css  main.tsx  strats.ts  types.ts
web_ui/src/api/: backtest.ts
web_ui/src/chart/: Chart.tsx  ChartContainer.tsx  ChartContext.tsx  ChartContextStore.ts  LineCanvas.tsx  LineChart.tsx  LineChartsContainer.tsx  LineContainerCtx.ts  candleCache.ts  constants.ts  dataSources.ts  loader.ts  providers.ts  types.ts  utils.ts
web_ui/src/chart/visual/: AssetIcon.tsx  Candle.tsx  CandleInfo.tsx  ChartSettings.tsx  CrossHair.tsx  Interval.tsx  PriceScale.tsx  TimeScale.tsx
web_ui/src/components/: AddMarket.tsx  BackgroundFX.tsx  Backtest.tsx  BacktestHistory.tsx  BacktestResult.tsx  BacktestRunDetail.tsx  CachedMarket.tsx  Cube.tsx  Docs.tsx  ErrorBanner.tsx  Header.tsx  Layout.tsx  Loading.tsx  Login.tsx  MarketCard.tsx  MarketDetail.tsx  MarketStrip.tsx  Markets.tsx  Position.tsx  RequireAuth.tsx  SearchBar.tsx  Settings.tsx  Spinner.tsx  StratEditor.tsx  TradingViewWidget.tsx  footer.tsx
web_ui/src/context/: AuthContext.tsx  AuthContextStore.ts  ThemeContext.tsx  ThemeContextStore.ts  WebSocketContext.tsx  WebSocketContextStore.ts
web_ui/src/editor/: custom_mode.tsx
web_ui/src/wallet/: auth.ts  backpack.ts  eip1193.ts  index.ts  phantom.ts  provider.ts  wallets.ts
(+12 files in other folders)
