[package]
name = "hyperliquid_rust_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperliquid_rust_sdk = { path = "../../hyperliquid-rust-sdk" }
kwant = { git = "https://github.com/0xNoSystem/Indicators_rs.git", branch = "main" }
env_logger = "0.10.0"
http = "0.2.9"
log = "0.4.19"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
flume = "0.11.1"
arraydeque = "0.5.1"
rustc-hash = "2.1.1"
alloy = { version = "1.0", default-features = false, features = [
  "signer-local",
] }
alloy-primitives = { version = "1", default-features = false, features = ["k256"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.12.24"
parquet = { version = "55", default-features = false, features = ["arrow", "snap", "zstd"] }
arrow = { version = "55", default-features = false, features = ["ipc"] }
tokio-util = "0.7.18"
rhai = { version = "1.24.0", features = ["sync"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "derive", "macros"] }
jsonwebtoken = "9"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
futures-util = "0.3"
tracing = "0.1"
regex = "1.12.3"
futures = "0.3.32"
parking_lot = "0.12.5"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }

[profile.release]
panic = "abort"

[profile.dev]
debug = 0
